--- a/python/.gitignore
+++ b/python/.gitignore
@@ -1,7 +1,10 @@
 # files with wrong or uncompleted answers
 
+1069.py
+1125.py
+1167.py
+
+#files that need to have a performance improve
+
 1023.py
 1025.py
-1069.py
-1222.py
-1125.py
